--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -10,8 +10,7 @@ body
 
 .active {
 	border-bottom: 2px solid #000;
-	height: 0px;
-
+	height:100%;
 }
 
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
@@ -75,3 +74,27 @@ body
 .btn-primary{
 	background-color: #2e81fa;
 }
+
+#newsmid {
+	width:100%;
+	border:1px solid #000;
+	padding:5px;
+	margin-bottom: 10px;
+}
+
+#newsmid p {
+	display:none;
+}
+
+#newsmid:hover p {
+	display:block;
+}
+
+.newsright > h2{
+	position:relative;
+	top:-50px;
+	margin:0;
+	background-color: #fff;
+	float:left;
+}
+
