--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -75,3 +75,42 @@ body
 .btn-primary{
 	background-color: #2e81fa;
 }
+
+/* RESULTATS */
+
+.titre_page
+{
+	text-align: center;
+	margin-bottom: 20px;
+}
+
+form [title="selecteurs"]
+{
+    width: 75%;
+}
+
+.select_elements
+{
+	
+}
+
+.search_bar
+{
+	width: 100%;
+	height: 50px;
+	background-color: #e9eaee;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    align-content: center;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    border-top: 1px solid #5a5a5a;
+    box-shadow: 0px 10px 10px #5a5a5a;
+}
+
+.results_frame:
+{
+	margin: 0px;
+}
