--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -143,7 +143,7 @@ ul > li {
 .btn-primary{
 	background-color: #2e81fa;
 }
-<<<<<<< HEAD
+
 
 /* RESULTATS */
 
@@ -171,13 +171,7 @@ form [title="selecteurs"]
     margin-top: 30px;
     margin-bottom: 30px;
     border-top: 1px solid #5a5a5a;
-    box-shadow: 0px 10px 10px #5a5a5a;
-}
-
-.results_frame
-{
-	margin: 0px;
-	margin-top:20px;
+    box-shadow: 0 10px 10px #5a5a5a;
 }
 
 .sport_detail {
@@ -230,7 +224,7 @@ p {
 .inscr {
 	border-style: solid;
 	background-color: #E9EAEE;
-	color: 5A5A5A;
+	color: #5A5A5A;
 	padding: 10px;
 }
 
