modification du carrousel en page d'accueil et ajout de la page calendrier

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -253,3 +253,12 @@ p {
 .newsright {
 	margin-top: -32px;
 }
+
+/* CALENDRIER */
+
+#calendar
+{
+	max-width: 900px;
+	margin: 0 auto;
+	margin-bottom: 50px;
+}
