--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -227,18 +227,18 @@ p {
 	padding: 10px;
 }
 
-#newsmid {
+.newsmid {
 	width:100%;
 	border:1px solid #000;
 	padding:5px;
 	margin-bottom: 10px;
 }
 
-#newsmid p {
+.newsmid p {
 	display:none;
 }
 
-#newsmid:hover p {
+.newsmid:hover p {
 	display:block;
 }
 
