--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -91,10 +91,9 @@ ul > li {
 	font-size:18px;
 
 }
+
+
 /* slider */
-
-
-
 
 
  .carousel-inner > .item > img {
@@ -272,4 +271,9 @@ p {
 #liseret{
 	height:10px;
 	background-color:black;
+}
+
+.mentions_legales{
+    text-align: center;
+    margin-bottom: 20px;
 }
