--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -351,9 +351,10 @@ p {
 
 }
 
-.mentions_legales{
+.mentions_legales {
 	text-align: center;
 	margin-bottom: 20px;
+}
 
 .pad {
 	padding-top:130px;
