--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -273,3 +273,24 @@ p {
 	height:10px;
 	background-color:black;
 }
+
+/* Carousel Documents */
+.carousel-control {
+  padding-top:10%;
+  width:5%;
+}
+.well {
+	margin-top: 150px;
+}
+h1 {
+	color:#2e81fa;
+	text-align: center;
+	font-weight: bold;
+}
+.carousel-inner {
+	padding-top: 50px;
+}
+
+.carousel {
+	height: 450px;
+}
