--- a/partials/horaires/horaires.html
+++ b/partials/horaires/horaires.html
@@ -69,7 +69,7 @@
 			</div>
 
 		<div class="container center-block">
-			<table class ="table table-bordered">
+			<table class ="table_horaires table-bordered">
 				<thead>
 					<tr>
 						<th class="col1H"></th>
