--- a/partials/calendrier/calendrier.html
+++ b/partials/calendrier/calendrier.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="fr">
-<html>
 <head>
 <meta charset='utf-8' />
 
@@ -13,14 +12,15 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script type="text/javascript" src="../../js/app.js"></script>
 
 <!-- SCRIPTS CALENDRIER -->
 
-<link href='fullcalendar/fullcalendar.css' rel='stylesheet' />
-<script src='fullcalendar/moment.min.js'></script>
-<script src='fullcalendar/jquery.min.js'></script>
-<script src='fullcalendar/fullcalendar.min.js'></script>
-<script src='fullcalendar/fr.js'></script>
+<link href='../../js/vendor/fullcalendar/fullcalendar.css' rel='stylesheet' />
+<script src='../../js/vendor/fullcalendar/moment.min.js'></script>
+<script src='../../js/vendor/fullcalendar/jquery.min.js'></script>
+<script src='../../js/vendor/fullcalendar/fullcalendar.min.js'></script>
+<script src='../../js/vendor/fullcalendar/fr.js'></script>
 
 <script>
 
@@ -58,60 +58,11 @@
 </script>
 
 </head>
-<body>
+<body ng-controller="dojoController as dojo">
 
 <!-- NAVIGATION -->
 
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <img alt="Brand" class="pull-left" src="img/logo.png"><a class="navbar-brand" id="title_logo" href="index.html">Dojo Beauceron</a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="navbar">
-      <ul class="nav navbar-nav pull-right">
-        <li><a href="#">Accueil<span class="sr-only">(current)</span></a></li>
-        <!--<li><a href="#">Link</a></li>-->
-        <li class="dropdown">
-          <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actualités <span class="caret"></span></a>-->
-          <a href="#">Actualités <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="news.html">News</a></li>
-            <li class="active"><a href="calendrier.html">Calendrier</a></li>
-          </ul>
-        </li>
-        <li class="dropdown">
-          <a href="#">Le Club <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="horaires.html">Horaires</a></li>
-            <li><a href="Inscription_Tarifs.html">Inscriptions et Tarifs</a></li>
-            <li><a href="#">Dojos</a></li>
-            <li><a href="historique.html">Historique</a></li>
-            <li><a href="documents.html">Documents</a></li>
-          </ul>
-        </li>
-        <li><a href="resultats.html">Résultats</a></li>
-        <li><a href="#">Contact</a></li>
-        <form class="navbar-form navbar-left" role="search">
-            <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
-            </div>
-            <button type="submit" class="btn btn-default">Rechercher</button>
-        </form>
-      </ul>
-
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
- <div id="liseret"></div>
-</nav>
+<navigation></navigation>
 
 <!-- TITRE PAGE-->
 
