--- a/partials/accueil/accueil.html
+++ b/partials/accueil/accueil.html
@@ -5,7 +5,8 @@
     <title>Dojo Beauceron - Accueil</title>
 
     <liens></liens>
-
+<script type="text/javascript" src="../../js/vendor/angular/angular.js"></script>
+    <script type="text/javascript" src="../../js/app.js"></script>
 </head>
 <body>
 
@@ -27,13 +28,13 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
         <div class="item active">
-            <img class="img-responsive" src="img/carrousel1.jpg" alt="">
+            <img class="img-responsive" src="../../img/carrousel1.jpg" alt="">
         </div>
         <div class="item">
-            <img class="img-responsive" src="img/carrousel2.jpg" alt="">
+            <img class="img-responsive" src="../../img/carrousel2.jpg" alt="">
         </div>
         <div class="item">
-            <img class="img-responsive" src="img/carrousel3.jpg" alt="">
+            <img class="img-responsive" src="../../img/carrousel3.jpg" alt="">
         </div>
 
     </div>
@@ -52,7 +53,7 @@
                 <div class="row">
                     <article class="col-xs-4 sport" id="judo">
                         <h2 class="text-center">Judo</h2>
-                        <img class="discipline img-responsive" src="img/Judo.png" alt="">
+                        <img class="discipline img-responsive" src="../../img/Judo.png" alt="">
                         <button class="btn btn-primary center-block">En savoir plus</button>
                         <div class="sport_detail">
                             <hr/>
@@ -60,9 +61,9 @@
 
                                 <div class="col-xs-8">
                                     <div class="sport_slideshow stagger3">
-                                        <img src="img/slide1.jpg" alt="">
-                                        <img src="img/slide2.jpg" alt="">
-                                        <img src="img/slide3.jpg" alt="">
+                                        <img src="../../img/slide1.jpg" alt="">
+                                        <img src="../../img/slide2.jpg" alt="">
+                                        <img src="../../img/slide3.jpg" alt="">
                                     </div>
                                 </div>
 
@@ -77,7 +78,7 @@
 
                     <article class="col-xs-4 sport" id="jujitsu">
                         <h2 class="text-center">Judo</h2>
-                        <img class="discipline img-responsive" src="img/JuJitsu.png" alt="">
+                        <img class="discipline img-responsive" src="../../img/JuJitsu.png" alt="">
                         <button class="btn btn-primary center-block">En savoir plus</button>
                         <div class="sport_detail">
                             <hr/>
@@ -85,9 +86,9 @@
 
                                 <div class="col-xs-8">
                                     <div class="sport_slideshow stagger3">
-                                        <img src="img/slide1.jpg" alt="">
-                                        <img src="img/slide2.jpg" alt="">
-                                        <img src="img/slide3.jpg" alt="">
+                                        <img src="../../img/slide1.jpg" alt="">
+                                        <img src="../../img/slide2.jpg" alt="">
+                                        <img src="../../img/slide3.jpg" alt="">
                                     </div>
                                 </div>
 
@@ -102,7 +103,7 @@
 
                     <article class="col-xs-4 sport" id="taiso">
                         <h2 class="text-center">Judo</h2>
-                        <img class="discipline img-responsive" src="img/Taiso.png" alt="">
+                        <img class="discipline img-responsive" src="../../img/Taiso.png" alt="">
                         <button class="btn btn-primary center-block">En savoir plus</button>
                         <div class="sport_detail">
                             <hr/>
@@ -110,9 +111,9 @@
 
                                     <div class="col-xs-8">
                                         <div class="sport_slideshow stagger3">
-                                            <img src="img/slide1.jpg" alt="">
-                                            <img src="img/slide2.jpg" alt="">
-                                            <img src="img/slide3.jpg" alt="">
+                                            <img src="../../img/slide1.jpg" alt="">
+                                            <img src="../../img/slide2.jpg" alt="">
+                                            <img src="../../img/slide3.jpg" alt="">
                                         </div>
                                 </div>
 
@@ -166,8 +167,7 @@
 
     <pied></pied>
 
-    <script type="text/javascript" src="../../js/vendor/angular/angular.js"></script>
-    <script type="text/javascript" src="../../js/app.js"></script>
+    
 </body>
 
 </html>
