modification des liens dans le fichier common

--- a/partials/common/pied.html
+++ b/partials/common/pied.html
@@ -3,7 +3,7 @@
         <p>&copy; 2016, Dojo Beauceron, tous droits réservés</p>
     </div>
     <div class="col-xs-4">
-        <a href="mentions.html">Mentions légales</a>
+        <a href="../mentions/mentions.html">Mentions légales</a>
     </div>
 </div>
 
