--- a/partials/documents/documents.html
+++ b/partials/documents/documents.html
@@ -1,10 +1,9 @@
 <!DOCTYPE HTML>
-<html>
+<html ng-app="dojo">
 	<head>
 		<meta charset = "utf-8"/>
 		<title>Dojo Beauceron - Documents</title>
-		<link rel="stylesheet" href="css/bootstrap.min.css">
-   		 <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+		<liens></liens>
     	
 	</head>
 
@@ -130,9 +129,9 @@
     
 
 
-<script type="text/javascript" src="js/jquery.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/documents.js"></script>
+<script type="text/javascript" src="../../js/vendor/angular/angular.js"></script>
+<script type="text/javascript" src="../../js/app.js"></script>
+
 
 </body>
 </html>
