--- a/partials/common/navigation.html
+++ b/partials/common/navigation.html
@@ -7,17 +7,17 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <img class="pull-left" src="img/logo.png"><a class="navbar-brand" id="title_logo" href="#">Dojo Beauceron</a>
+            <img class="pull-left" src="../../img/logo.png"><a class="navbar-brand" id="title_logo" href="#">Dojo Beauceron</a>
         </div>
 
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="index.html">Accueil</a></li>
+                <li class="active"><a href="../../index.html">Accueil</a></li>
 
                 <li class="dropdown">
                     <a href="#">Actualités <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="news.html">News</a></li>
+                        <li><a href="../news/news.html">News</a></li>
                         <li><a href="#">Calendrier</a></li>
                     </ul>
                 </li>
@@ -25,13 +25,13 @@
                     <a href="#">Le Club <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Horaires</a></li>
-                        <li><a href="Inscription_Tarifs.html">Inscriptions et Tarifs</a></li>
+                        <li><a href="../inscription/Inscription_Tarifs.html">Inscriptions et Tarifs</a></li>
                         <li><a href="#">Dojos</a></li>
                         <li><a href="#">Historique</a></li>
                         <li><a href="#">Documents</a></li>
                     </ul>
                 </li>
-                <li><a href="resultats.html">Résultats</a></li>
+                <li><a href="../resultats/resultats.html">Résultats</a></li>
                 <li><a href="#">Contact</a></li>
                 <form class="navbar-form navbar-left" role="search">
                     <div class="form-group">
