--- a/partials/common/liens.html
+++ b/partials/common/liens.html
@@ -1,3 +1,4 @@
  <link rel="stylesheet" href="../../css/vendor/bootstrap/bootstrap.min.css">
  <link rel="stylesheet" href="../../css/vendor/nivo_slider/nivo-slider.css">
  <link rel="stylesheet" type="text/css" href="../../css/stylesheet.css">
+ <script src="../../js/vendor/bootstrap/bootstrap.min.js"></script>
