--- a/partials/documents/documents.html
+++ b/partials/documents/documents.html
@@ -3,62 +3,15 @@
 	<head>
 		<meta charset = "utf-8"/>
 		<title>Dojo Beauceron - Documents</title>
+
 		<liens></liens>
-    	
-	</head>
+
+
+    </head>
 
 	<body>
-		<!-- navigation -->
 
-			<nav class="navbar navbar-default navbar-fixed-top">
-			    <div class="container-fluid">
-			        <!-- Brand and toggle get grouped for better mobile display -->
-			        <div class="navbar-header">
-			            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
-			                <span class="sr-only">Toggle navigation</span>
-			                <span class="icon-bar"></span>
-			                <span class="icon-bar"></span>
-			                <span class="icon-bar"></span>
-			            </button>
-			            <img class="pull-left" src="img/logo.png"><a class="navbar-brand" id="title_logo" href="#">Dojo Beauceron</a>
-			        </div>
-
-			        <!-- Collect the nav links, forms, and other content for toggling -->
-			        <div class="collapse navbar-collapse" id="navbar">
-			            <ul class="nav navbar-nav navbar-right">
-			                <li><a href="index.html">Accueil</a></li>
-
-			                <li class="dropdown">
-			                    <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actualités <span class="caret"></span></a>-->
-			                    <a href="#">Actualités <span class="caret"></span></a>
-			                    <ul class="dropdown-menu">
-			                        <li><a href="news.html">News</a></li>
-			                        <li><a href="#">Calendrier</a></li>
-			                    </ul>
-			                </li>
-			                <li class="dropdown">
-			                    <a href="#">Le Club <span class="caret"></span></a>
-			                    <ul class="dropdown-menu">
-			                        <li><a href="#">Horaires</a></li>
-			                        <li><a href="Inscription_Tarifs.html">Inscriptions et Tarifs</a></li>
-			                        <li><a href="#">Dojos</a></li>
-			                        <li><a href="#">Historique</a></li>
-			                        <li class="active"><a href="documents.html">Documents</a></li>
-			                    </ul>
-			                </li>
-			                <li><a href="resultats.html">Résultats</a></li>
-			                <li><a href="#">Contact</a></li>
-			                <form class="navbar-form navbar-left" role="search">
-			                    <div class="form-group">
-			                        <input type="text" class="form-control" placeholder="Search">
-			                    </div>
-			                    <button type="submit" class="btn btn-default">Rechercher</button>
-			                </form>
-			            </ul>
-			    </div><!-- /.navbar-collapse -->
-			  </div><!-- /.container-fluid -->
-            <div id="liseret"></div>
-	</nav>
+        <navigation></navigation>
 
 <!--TITRE PAGE-->	
 	<div class="container">
@@ -118,19 +71,9 @@
     </div><!--/container -->
 
 
-             <div class="footer">
-                <div class="col-xs-offset-4 col-xs-4">
-                <p>&copy; 2016, Dojo Beauceron, tous droits réservés</p>
-                </div>
-                <div class="col-xs-4">
-                <a href="#">Mentions légales</a>
-                </div>
-            </div>
-    
+       <pied></pied>
 
 
-<script type="text/javascript" src="../../js/vendor/angular/angular.js"></script>
-<script type="text/javascript" src="../../js/app.js"></script>
 
 
 </body>
