--- a/partials/accueil/accueil.html
+++ b/partials/accueil/accueil.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <title>Dojo Beauceron - Accueil</title>
 
-    <liens></liens>
-<script type="text/javascript" src="../../js/vendor/angular/angular.js"></script>
+   
+    <script type="text/javascript" src="../../js/vendor/angular/angular.js"></script>
     <script type="text/javascript" src="../../js/app.js"></script>
+    <script src="../../js/script.js"></script>
+    <script src="../../js/vendor/dot/jquery.dotdotdot.min.js"></script>
+    <script src="../../js/vendor/nivo_slider/jquery.nivo.slider.pack.js"></script>
+
+    <liens></liens>
 </head>
 <body>
 
@@ -17,38 +22,7 @@
 
 -----------------------------
 
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators hidden-xs">
-        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-    </ol>
 
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img class="img-responsive" src="../../img/carrousel1.jpg" alt="">
-        </div>
-        <div class="item">
-            <img class="img-responsive" src="../../img/carrousel2.jpg" alt="">
-        </div>
-        <div class="item">
-            <img class="img-responsive" src="../../img/carrousel3.jpg" alt="">
-        </div>
-
-    </div>
-
-    <!-- Controls -->
-    <a class="left carousel-control hidden-xs" href="#carousel-example-generic" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control hidden-xs" href="#carousel-example-generic" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
             <div class="container">
                 <div class="row">
                     <article class="col-xs-4 sport" id="judo">
