--- a/partials/documents/documents.html
+++ b/partials/documents/documents.html
@@ -3,8 +3,12 @@
 	<head>
 		<meta charset = "utf-8"/>
 		<title>Dojo Beauceron - Documents</title>
-
+        <script src="../../js/vendor/angular/angular.js"></script>
+        <script src="../../js/app.js"></script>
 		<liens></liens>
+        <script src="../../js/vendor/jquery/jquery.js"></script>
+        <script src="../../js/vendor/bootstrap/bootstrap.min.js"></script>
+        <script src="../../js/documents.js"></script>
 
 
     </head>
@@ -69,12 +73,6 @@
                 </div><!--/myCarousel-->
             </div><!-- /well -->
     </div><!--/container -->
-
-
        <pied></pied>
-
-
-
-
 </body>
 </html>
