correction de la navigation

--- a/partials/calendrier/calendrier.html
+++ b/partials/calendrier/calendrier.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="fr">
-<head>
-<meta charset='utf-8' />
+<html lang="fr" ng-app="dojo">
+<meta charset='utf-8'/>
 
 <title>Dojo Beauceron - Calendrier</title>
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+<script type="text/javascript" src="../../js/vendor/angular/angular.js"></script>
+<script type="text/javascript" src="../../js/app.js"></script>
 
-<!-- SCRIPTS GENERAUX -->
+<liens></liens>
+
+<!-- SCRIPTS GENERAUX NECESSAIRES AU CALENDRIER -->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<script type="text/javascript" src="../../js/app.js"></script>
 
-<!-- SCRIPTS CALENDRIER -->
+<!-- SCRIPTS SPECIFIQUES CALENDRIER -->
 
 <link href='../../js/vendor/fullcalendar/fullcalendar.css' rel='stylesheet' />
 <script src='../../js/vendor/fullcalendar/moment.min.js'></script>
@@ -58,7 +58,7 @@
 </script>
 
 </head>
-<body ng-controller="dojoController as dojo">
+<body>
 
 <!-- NAVIGATION -->
 
@@ -85,24 +85,7 @@
 
 <!-- FOOTER -->
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="footer">
-            <div class="col-xs-4">
-            </div>
-            <div class="col-xs-4">
-            <p>&copy; 2016, Dojo Beauceron, tous droits réservés</p>
-            </div>
-            <div class="col-xs-4">
-            <a href="mentions.html">Mentions légales</a>
-            </div>
-        </div>
-    </div>
-</div>
-
-<!-- SCRIPTS -->
-
-
+<pied></pied>
 
 </body>
 </html>
