--- a/partials/common/navigation.html
+++ b/partials/common/navigation.html
@@ -1,46 +1,37 @@
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default">
     <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <img class="pull-left" src="../../img/logo.png"><a class="navbar-brand" id="title_logo" href="#">Dojo Beauceron</a>
-        </div>
-
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header"> <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>            <img alt="Brand" class="pull-left" src="../../img/logo.png"><a class="navbar-brand" id="title_logo" href="/index.html">Dojo Beauceron</a> </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="navbar">
-            <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="../../index.html">Accueil</a></li>
-
+            <ul class="nav navbar-nav pull-right">
+                <li><a href="/index.html">Accueil<span class="sr-only">(current)</span></a></li>
+                <!--<li><a href="#">Link</a></li>-->
                 <li class="dropdown">
-                    <a href="#">Actualités <span class="caret"></span></a>
+                    <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actualités <span class="caret"></span></a>--><a href="#">Actualités <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="../news/news.html">News</a></li>
-                        <li><a href="#">Calendrier</a></li>
+                        <li><a href="/partials/news/news.html">News</a></li>
+                        <li class="active"><a href="/partials/calendrier/calendrier.html">Calendrier</a></li>
                     </ul>
                 </li>
-                <li class="dropdown">
-                    <a href="#">Le Club <span class="caret"></span></a>
+                <li class="dropdown"> <a href="#">Le Club <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Horaires</a></li>
-                        <li><a href="../inscription/Inscription_Tarifs.html">Inscriptions et Tarifs</a></li>
+                        <li><a href="/partials/horaires/horaires.html">Horaires</a></li>
+                        <li><a href="/partials/inscription/Inscription_Tarifs.html">Inscriptions et Tarifs</a></li>
                         <li><a href="#">Dojos</a></li>
-                        <li><a href="#">Historique</a></li>
-                        <li><a href="#">Documents</a></li>
+                        <li><a href="/partials/historique/historique.html">Historique</a></li>
+                        <li><a href="/partials/documents/documents.html">Documents</a></li>
                     </ul>
                 </li>
-                <li><a href="../resultats/resultats.html">Résultats</a></li>
+                <li><a href="/partials/resultats/resultats.html">Résultats</a></li>
                 <li><a href="#">Contact</a></li>
                 <form class="navbar-form navbar-left" role="search">
-                    <div class="form-group">
-                        <input id="search" type="text" class="form-control" placeholder="Search">
-                    </div>
-                    <button type="submit" class="btn btn-primary">Rechercher</button>
-                </form>
+                    <div class="form-group"> <input type="text" class="form-control" placeholder="Search"> </div> <button type="submit" class="btn btn-default">Rechercher</button> </form>
             </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
     <div id="liseret"></div>
 </nav>
+
