--- a/partials/accueil/accueil.html
+++ b/partials/accueil/accueil.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Dojo Beauceron - Accueil</title>
-
-   
+    <liens></liens>
     <script type="text/javascript" src="../../js/vendor/angular/angular.js"></script>
     <script type="text/javascript" src="../../js/app.js"></script>
     <script src="../../js/script.js"></script>
     <script src="../../js/vendor/dot/jquery.dotdotdot.min.js"></script>
-    <script src="../../js/vendor/nivo_slider/jquery.nivo.slider.pack.js"></script>
+    <script src="../../js/vendor/jquery/jquery.js"></script>
+    <script src="../../js/vendor/nivo_slider/jquery.nivo.slider.pack.js"></script>    
+   
 
-    <liens></liens>
+
+    
 </head>
 <body>
 
