--- a/partials/accueil/accueil.html
+++ b/partials/accueil/accueil.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Dojo Beauceron - Accueil</title>
-    <liens></liens>
+        <liens></liens>
+    
     <script type="text/javascript" src="../../js/vendor/angular/angular.js"></script>
     <script type="text/javascript" src="../../js/app.js"></script>
     <script src="../../js/script.js"></script>
+        <script src="../../js/vendor/jquery/jquery.js"></script>
     <script src="../../js/vendor/dot/jquery.dotdotdot.min.js"></script>
-    <script src="../../js/vendor/jquery/jquery.js"></script>
+     <script src="../../js/vendor/bootstrap/bootstrap.min.js"></script>
     <script src="../../js/vendor/nivo_slider/jquery.nivo.slider.pack.js"></script>    
    
 
@@ -20,11 +22,11 @@
 
 <!-- navigation -->
 <navigation></navigation>
+<!-- slide -->
+<slide-accueil></slide-accueil>
 
 
------------------------------
-
-
+<!-- discipline -->
             <div class="container">
                 <div class="row">
                     <article class="col-xs-4 sport" id="judo">
