discipline et news

--- a/partials/accueil/accueil.html
+++ b/partials/accueil/accueil.html
@@ -11,10 +11,7 @@
         <script src="../../js/vendor/jquery/jquery.js"></script>
     <script src="../../js/vendor/dot/jquery.dotdotdot.min.js"></script>
      <script src="../../js/vendor/bootstrap/bootstrap.min.js"></script>
-    <script src="../../js/vendor/nivo_slider/jquery.nivo.slider.pack.js"></script>    
-   
-
-
+    <script src="../../js/vendor/nivo_slider/jquery.nivo.slider.pack.js"></script>
     
 </head>
 <body>
@@ -27,123 +24,19 @@
 
 
 <!-- discipline -->
-            <div class="container">
-                <div class="row">
-                    <article class="col-xs-4 sport" id="judo">
-                        <h2 class="text-center">Judo</h2>
-                        <img class="discipline img-responsive" src="../../img/Judo.png" alt="">
-                        <button class="btn btn-primary center-block">En savoir plus</button>
-                        <div class="sport_detail">
-                            <hr/>
-                            <div class="row">
-
-                                <div class="col-xs-8">
-                                    <div class="sport_slideshow stagger3">
-                                        <img src="../../img/slide1.jpg" alt="">
-                                        <img src="../../img/slide2.jpg" alt="">
-                                        <img src="../../img/slide3.jpg" alt="">
-                                    </div>
-                                </div>
-
-                                <div class="col-xs-4">
-                                    <h2 class="stagger1">Judo</h2>
-                                    <p class="stagger2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aspernatur debitis deleniti, dolore eveniet explicabo fugiat in maiores minus non numquam possimus recusandae temporibus, totam ullam, vero vitae voluptas voluptatibus.</p>
-                                </div>
-                            </div>
-                            <hr/>
-                        </div><!-- end sport detail -->
-                    </article><!-- end 1st sport -->
-
-                    <article class="col-xs-4 sport" id="jujitsu">
-                        <h2 class="text-center">Judo</h2>
-                        <img class="discipline img-responsive" src="../../img/JuJitsu.png" alt="">
-                        <button class="btn btn-primary center-block">En savoir plus</button>
-                        <div class="sport_detail">
-                            <hr/>
-                            <div class="row">
-
-                                <div class="col-xs-8">
-                                    <div class="sport_slideshow stagger3">
-                                        <img src="../../img/slide1.jpg" alt="">
-                                        <img src="../../img/slide2.jpg" alt="">
-                                        <img src="../../img/slide3.jpg" alt="">
-                                    </div>
-                                </div>
-
-                                <div class="col-xs-4">
-                                    <h2 class="stagger1">Jujitsu</h2>
-                                    <p class="stagger2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aspernatur debitis deleniti, dolore eveniet explicabo fugiat in maiores minus non numquam possimus recusandae temporibus, totam ullam, vero vitae voluptas voluptatibus.</p>
-                                </div>
-                            </div>
-                            <hr/>
-                        </div><!-- end sport detail -->
-                    </article><!-- end 2nd sport -->
-
-                    <article class="col-xs-4 sport" id="taiso">
-                        <h2 class="text-center">Judo</h2>
-                        <img class="discipline img-responsive" src="../../img/Taiso.png" alt="">
-                        <button class="btn btn-primary center-block">En savoir plus</button>
-                        <div class="sport_detail">
-                            <hr/>
-                            <div class="row">
-
-                                    <div class="col-xs-8">
-                                        <div class="sport_slideshow stagger3">
-                                            <img src="../../img/slide1.jpg" alt="">
-                                            <img src="../../img/slide2.jpg" alt="">
-                                            <img src="../../img/slide3.jpg" alt="">
-                                        </div>
-                                </div>
-
-                                <div class="col-xs-4">
-                                    <h2 class="stagger1">Taiso</h2>
-                                    <p class="stagger2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aspernatur debitis deleniti, dolore eveniet explicabo fugiat in maiores minus non numquam possimus recusandae temporibus, totam ullam, vero vitae voluptas voluptatibus.</p>
-                                </div>
-                            </div>
-                            <hr/>
-                        </div><!-- end sport detail -->
-                    </article><!-- end 3rd sport -->
-
-
-                </div><!-- end row -->
-                <div class="row-detail"></div>
-            </div><!-- end container -->
+<discipline></discipline>
 
 
 
 
 <div class="container">
-    <div class="row" id="news">
+    <div class="row" id="news"></div></div>
+<!-- news-->
+        
+<news-accueil></news-accueil>
 
-        <div class="col-xs-4">
-            <div class="thumbnail text-center">
-                <h2>News</h2>
-                <p class="article dot-ellipsis">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores dolore, qui veniam explicabo, sint inventore tempora iusto similique repellendus porro nulla necessitatibus dignissimos nemo, aperiam facilis. Aperiam voluptatum recusandae ducimus.</p>
-            </div>
-        </div>
 
-        <div class="col-xs-4">
-            <div class="thumbnail text-center">
-                <h2>News</h2>
-                <p class="article dot-ellipsis">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores dolore, qui veniam explicabo, sint inventore tempora iusto similique repellendus porro nulla necessitatibus dignissimos nemo, aperiam facilis. Aperiam voluptatum recusandae ducimus.</p>
-            </div>
-        </div>
-
-        <div class="col-xs-4">
-            <div class="thumbnail text-center">
-                <h2>News</h2>
-                <p class="article dot-ellipsis">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores dolore, qui veniam explicabo, sint inventore tempora iusto similique repellendus porro nulla necessitatibus dignissimos nemo, aperiam facilis. Aperiam voluptatum recusandae ducimus.
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde in earum cum reiciendis vero a, autem velit? Sed soluta suscipit quos, quia minima deserunt labore nisi, esse non debitis illo.</p>
-            </div>
-        </div>
-        <div class="center-block">
-            <button class="btn btn-primary center-block">Voir plus de news</button>
-        </div>
-    </div>
-
-</div>
-
-    <pied></pied>
+<pied></pied>
 
     
 </body>
