modification du calendrier, de l'historique et des mentions légales

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -268,7 +268,8 @@ p {
 }
 
 #historique {
-	padding-top:10rem;
+	padding-top: 2rem;
+	padding-bottom: 2rem;
 }
 
 #liseret{
@@ -404,7 +405,7 @@ h1 {
 }
 
 /* Horaires */
-table_horaires {
+.table_horaires {
 	margin-top:150px;
 }
 
