--- a/partials/historique/historique.html
+++ b/partials/historique/historique.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" ng-app="dojo">
 <head>
-    <meta charset="UTF-8">
+    <meta charset='utf-8' />
+
     <title>Dojo Beauceron - Historique</title>
+
+    <script type="text/javascript" src="../../js/vendor/angular/angular.js"></script>
+    <script type="text/javascript" src="../../js/app.js"></script>
+
+    <liens></liens>
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 </head>
@@ -10,54 +17,7 @@
 
 <!-- navigation -->
 
-<nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <img class="pull-left" src="img/logo.png"><a class="navbar-brand" id="title_logo" href="#">Dojo Beauceron</a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="navbar">
-            <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="index.html">Accueil</a></li>
-
-                <li class="dropdown">
-                    <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actualités <span class="caret"></span></a>-->
-                    <a href="#">Actualités <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="news.html">News</a></li>
-                        <li><a href="calendrier.html">Calendrier</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="#">Le Club <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Horaires</a></li>
-                        <li><a href="Inscription_Tarifs.html">Inscriptions et Tarifs</a></li>
-                        <li><a href="#">Dojos</a></li>
-                        <li><a href="#">Historique</a></li>
-                        <li><a href="#">Documents</a></li>
-                    </ul>
-                </li>
-                <li><a href="resultats.html">Résultats</a></li>
-                <li><a href="#">Contact</a></li>
-                <form class="navbar-form navbar-left" role="search">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search">
-                    </div>
-                    <button type="submit" class="btn btn-default">Rechercher</button>
-                </form>
-            </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-</nav>
+<navigation></navigation>
 
 <div class="container">
     <div class="row">
@@ -109,15 +69,9 @@
     </div><!-- end row -->
 </div><!-- end container -->
 
+<!-- FOOTER -->
 
-<div class="footer">
-    <div class="col-xs-offset-4 col-xs-4">
-        <p>&copy; 2016, Dojo Beauceron, tous droits réservés</p>
-    </div>
-    <div class="col-xs-4">
-        <a href="mentions.html">Mentions légales</a>
-    </div>
-</div>
+<pied></pied>
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
