--- a/partials/horaires/tableau-horaires.html
+++ b/partials/horaires/tableau-horaires.html
@@ -1,33 +1,3 @@
-<!DOCTYPE HTML>
-<html ng-app="dojo">
-	<head>
-		<meta charset = "utf-8"/>
-		<title>Dojo Beauceron - Horaires</title>
-
-		<script type="text/javascript" src="../../js/vendor/angular/angular.js"></script>
-    	<script type="text/javascript" src="../../js/app.js"></script>
-    	<script src="../../js/script.js"></script>
-		<script src="../../js/vendor/jquery/jquery.js"></script>
-
-    	<script src="../../js/vendor/bootstrap/bootstrap.min.js"></script>
-		<liens></liens>
-    	
-	</head>
-
-	<body>
-		<!-- navigation -->
-	<navigation>
-		
-	</navigation>
-
-		<!-- horaires --> 
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-xs-12">
-				<h3 class="horaires">Horaires 2016-2017</h3>
-				</div>
-			</div>
-
 		<div class="container center-block">
 			<table class ="table_horaires table-bordered">
 				<thead>
@@ -35,7 +5,6 @@
 						<th class="col1H"></th>
 						<th colspan = 2>Dojo de Mainvilliers</th>
 						<th colspan = 2>Dojo de la Madeleine</th>
-						<th colspan = 2>Fontaine la Guyon</th>
 					</tr>
 				</thead>
 				<tbody>
@@ -45,8 +14,6 @@
 						<th class="col3H">Né en ...</th>
 						<th class="col4H">Horaires</th>
 						<th class="col5H">Né en ...</th>
-						<th class="col6H">Horaires</th>
-						<th class="col7H">Né en ...</th>
 					</tr>
 					<tr>
 						<td rowspan = 3>Lundi</td>
@@ -54,7 +21,6 @@
 						<td rowspan = 2>2002 à 2008</td>
 						<td class="col4H">18h15 à 19h30</td>
 						<td class="col5H">2007 à 2010</td>
-						<td rowspan = 3 colspan = 2></td>
 					</tr>
 					<tr>
 						<td class="col4H">19h15 à 20h30</td>
@@ -70,8 +36,7 @@
 						<td rowspan = 3>Mardi</td>
 						<td class="col2H">17h30 à 18h15</td>
 						<td class="col3H">Baby Judo 2012/2011</td>
-						<td rowspan = 3 colspan = 2></td>
-						<td rowspan = 3 colspan = 2></td>
+						<td rowspan=3 colspan=2></td>
 					</tr>
 					<tr>
 						<td class="col2H">18h15 à 19h30</td>
@@ -87,7 +52,6 @@
 						<td class="col3H">2009/2010</td>
 						<td class="col4H">15h00 à 15h45</td>
 						<td class="col5H">Baby Judo 2011/2012</td>
-						<td rowspan = 3 colspan = 2></td>
 					</tr>
 					<tr>
 						<td class="col2H">17h00 à 18h00</td>
@@ -98,11 +62,12 @@
 					<tr>
 						<td class="col2H">18h00 à 19h30</td>
 						<td class="col3H">2007/2008</td>
+						<td colspan=2></td>
 					</tr>
 					<tr>
 						<td rowspan = 3>Jeudi</td>
 						<td rowspan = 3 colspan = 2></td>
-						<td rowspan = 3 colspan = 2></td>
+						<th colspan = 2>Fontaine-La-Guyon</th>
 					</tr>
 					<tr>
 						<td class="col4H">16h45 à 17h30</td>
@@ -116,18 +81,16 @@
 						<td rowspan = 2>Vendredi</td>
 						<td rowspan = 2>20h00 à 21h30</td>
 						<td rowspan = 2>2001 et avant</td>
-						<td class="col4H">17h30 à 19h00</td>
-						<td class="col5H">Entre 2002 et 2006</td>
-						<td colspan = 2></td>
+						<th colspan = 2>Dojo de la Madeleine</th>
 					</tr>
 					<tr>
-
+						<td class="col4H">17h30 à 19h00</td>
+						<td class="col5H">Entre 2002 et 2006</td>
 					</tr>
 					<tr>
 						<td rowspan = 2>Samedi</td>
 						<td rowspan = 2>10h00 à 11h30</td>
 						<td rowspan = 2>Cours à thème<br/> Jeunes ou adultes<br/>Sur Réservation</td>
-						<td colspan = 2></td>
 						<td colspan = 2></td>
 					</tr>
 
@@ -135,10 +98,3 @@
 			</table>
 			
 		</div><!--/container center-block -->
-
-		</div><!-- /container-fluid -->
-
-<pied></pied>
-
-</body>
-</html>
