ajouts des routes

--- a/partials/documents/documents.html
+++ b/partials/documents/documents.html
@@ -11,6 +11,7 @@
     <script src="../../js/documents.js"></script>
 </head>
 <body ng-controller="DocumentsController as doc">
+    <div ng-view></div>
     <navigation></navigation>
     <slider-documents></slider-documents>
     <pied></pied>
