--- a/partials/resultats/resultats.html
+++ b/partials/resultats/resultats.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <title>Dojo Beauceron - Résultats</title>
     <script src="../../js/vendor/angular/angular.js"></script>
+    <script src="../../js/vendor/angular/angular-route.min.js"></script>
     <script src="../../js/app.js"></script>
+    <script src="../../js/resultats.js"></script>
     <liens></liens>
     <script src="../../js/vendor/jquery/jquery.js"></script>
     <script src="../../js/vendor/bootstrap/bootstrap.min.js"></script>
 </head>
-<body ng-controller="resultatsController as result">
-
+<body>
+<div ng-view></div>
 <navigation></navigation>
 
 <div class="container-fluid">
