finalisation du calendrier et resolutin de qq conflits

--- a/partials/calendrier/calendrier.html
+++ b/partials/calendrier/calendrier.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="fr" ng-app="dojo">
+<html lang="fr" ng-app="fullcal">
 <head>
     <meta charset="utf-8">
 
     <title>Dojo Beauceron - Calendrier</title>
 
     <script type="text/javascript" src="../../js/vendor/angular/angular.js"></script>
-    <script type="text/javascript" src="../../js/app.js"></script>
+    <script type="text/javascript" src="../../js/fullcal.js"></script>
 
     <liens></liens>
 
